# spacework

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  spacework.toml
langs/: c.toml  cpp.toml  example.toml  fail.toml
langs/cpp/: cpp.toml  main.cpp
langs/templates/: main.cpp
runfiles/: cpp.toml  example.toml
src/: config.rs  lib.rs  main.rs  spacework.rs
src/config/: cli.rs  languagefile.rs  runfile.rs  spaceworkfile.rs
src/spacework/: .language.rs.bak  history.rs  language.rs  languagefile.rs  workspace.rs
